# Internship-NV

./: README.md
Task3_LogAnalizer/: CMakeLists.txt  README.md  input.txt
Task3_LogAnalizer/include/: LogAnalyzer.hpp
Task3_LogAnalizer/src/: LogAnalyzer.cpp  main.cpp
